--- a/index.html
+++ b/index.html
@@ -3,50 +3,89 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="./css/main.css">
   <title>Frontend Mentor | Skilled e-learning landing page</title>
 </head>
 <body>
+  <nav>
+    <a href="#"><img src="./assets/logo-dark.svg" alt="skilled - Dark logo"></a>
+    <button>Get Started</button>
+  </nav>
 
-  Get Started
+  <main>
+    <header>
+      <div>
+        <h1>Maximize skill, minimize budget</h1>
+        <p>Our modern courses across a range of in-demand skills will give you the knowledge you need to live the life you want.</p>
+        <button>Get Started</button>
+      </div>
 
-  Maximize skill, minimize budget
+      <picture>
+        <img src="./assets/image-hero-mobile.webp" alt="Decorative hero image">
+      </picture>
+    </header>
 
-  Our modern courses across a range of in-demand skills will give you the 
-  knowledge you need to live the life you want.
+    <section>
+      <div>
+        <h2>Check out our most popular courses!</h2>
+      </div>
+      <article class="course-card">
+        <img src="./assets/icon-animation.svg" alt="Decorative animation icon">
+        <h3>Animation</h3>
+        <p>
+          Learn the latest animation techniques to create stunning motion
+          design and captivate your audience.
+        </p>
+        <a href="#">Get Started</a>
+      </article>
 
-  Get Started
+      <article class="course-card">
+        <img src="./assets/icon-design.svg" alt="Decorative design icon">
+        <h3>Design</h3>
+        <p>
+          Create beautiful, usable interfaces to help shape the future of
+          how the web looks.
+        </p>
+        <a href="#">Get Started</a>
+      </article>
 
-  Check out our most popular courses!
+      <article class="course-card">
+        <img src="./assets/icon-photography.svg" alt="Decorative photography icon">
+        <h3>Photography</h3>
+        <p>
+          Explore critical fundamentals like lighting, composition, and focus
+          to capture exceptional photos.
+        </p>
+        <a href="#">Get Started</a>
+      </article>
 
-  Animation
-  Learn the latest animation techniques to create stunning motion 
-  design and captivate your audience.
-  Get Started
+      <article class="course-card">
+        <img src="./assets/icon-crypto.svg" alt="Decorative crypto icon">
+        <h3>Crypto</h3>
+        <p>
+          All you need to know to get started investing in crypto. Go from beginner
+          to advanced with this 54 hour course.
+        </p>
+        <a href="#">Get Started</a>
+      </article>
 
-  Design
-  Create beautiful, usable interfaces to help shape the future of 
-  how the web looks.
-  Get Started
+      <article class="course-card">
+        <img src="./assets/icon-business.svg" alt="Decorative business icon">
+        <h3>Business</h3>
+        <p>
+          A step-by-step playbook to help you start, scale, and sustain your business
+          without outside investment.
+        </p>
+        <a href="#">Get Started</a>
+      </article>
+    </section>
+  </main>
 
-  Photography
-  Explore critical fundamentals like lighting, composition, and focus 
-  to capture exceptional photos.
-  Get Started
-
-  Crypto
-  All you need to know to get started investing in crypto. Go from beginner 
-  to advanced with this 54 hour course.
-  Get Started
-
-  Business
-  A step-by-step playbook to help you start, scale, and sustain your business 
-  without outside investment.
-  Get Started
-
-  Get Started
+  <footer>
+    <a href="#"><img src="./assets/logo-light.svg" alt="skilled - Light logo"></a>
+    <button>Get Started</button>
+  </footer>
 
 </body>
 </html>
