--- a/index.html
+++ b/index.html
@@ -10,32 +10,33 @@
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;700;800&display=swap" rel="stylesheet">
   <title>Frontend Mentor | Skilled e-learning landing page</title>
 </head>
-<body>
-  <nav>
+<body class="text_M">
+  <nav class="nav">
     <a href="#"><img src="./assets/logo-dark.svg" alt="skilled - Dark logo"></a>
-    <button>Get Started</button>
+    <button class="button_first">Get Started</button>
   </nav>
 
   <main>
-    <header>
+    <header class="header">
       <div>
-        <h1>Maximize skill, minimize budget</h1>
-        <p>Our modern courses across a range of in-demand skills will give you the knowledge you need to live the life you want.</p>
-        <button>Get Started</button>
+        <h1 class="heading_XL header_title">Maximize skill, minimize budget</h1>
+        <p class="header_text">Our modern courses across a range of in-demand skills will give you the knowledge you need to live the life you want.</p>
+        <button class="button_second">Get Started</button>
       </div>
 
       <picture>
+        <source media="(min-width: 768px)" srcset="./assets/image-hero-tablet.webp">
         <img src="./assets/image-hero-mobile.webp" alt="Decorative hero image">
       </picture>
     </header>
 
-    <section>
-      <div>
-        <h2>Check out our most popular courses!</h2>
+    <section class="course_section">
+      <div class="intro_card">
+        <h2 class="heading_M">Check out our most popular courses!</h2>
       </div>
-      <article class="course-card">
+      <article class="course_card">
         <img src="./assets/icon-animation.svg" alt="Decorative animation icon">
-        <h3>Animation</h3>
+        <h3 class="heading_S">Animation</h3>
         <p>
           Learn the latest animation techniques to create stunning motion
           design and captivate your audience.
@@ -43,9 +44,9 @@
         <a href="#">Get Started</a>
       </article>
 
-      <article class="course-card">
+      <article class="course_card">
         <img src="./assets/icon-design.svg" alt="Decorative design icon">
-        <h3>Design</h3>
+        <h3 class="heading_S">Design</h3>
         <p>
           Create beautiful, usable interfaces to help shape the future of
           how the web looks.
@@ -53,9 +54,9 @@
         <a href="#">Get Started</a>
       </article>
 
-      <article class="course-card">
+      <article class="course_card">
         <img src="./assets/icon-photography.svg" alt="Decorative photography icon">
-        <h3>Photography</h3>
+        <h3 class="heading_S">Photography</h3>
         <p>
           Explore critical fundamentals like lighting, composition, and focus
           to capture exceptional photos.
@@ -63,9 +64,9 @@
         <a href="#">Get Started</a>
       </article>
 
-      <article class="course-card">
+      <article class="course_card">
         <img src="./assets/icon-crypto.svg" alt="Decorative crypto icon">
-        <h3>Crypto</h3>
+        <h3 class="heading_S">Crypto</h3>
         <p>
           All you need to know to get started investing in crypto. Go from beginner
           to advanced with this 54 hour course.
@@ -73,9 +74,9 @@
         <a href="#">Get Started</a>
       </article>
 
-      <article class="course-card">
+      <article class="course_card">
         <img src="./assets/icon-business.svg" alt="Decorative business icon">
-        <h3>Business</h3>
+        <h3 class="heading_S">Business</h3>
         <p>
           A step-by-step playbook to help you start, scale, and sustain your business
           without outside investment.
@@ -85,9 +86,9 @@
     </section>
   </main>
 
-  <footer>
+  <footer class="footer">
     <a href="#"><img src="./assets/logo-light.svg" alt="skilled - Light logo"></a>
-    <button>Get Started</button>
+    <button class="button_third">Get Started</button>
   </footer>
 
 </body>
