finished mobile design

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <title>Frontend Mentor | Skilled e-learning landing page</title>
 </head>
 <body class="text_M">
+  <!--nav and picture styles are placed in the header.scss file-->
   <nav class="nav">
     <a href="#"><img src="./assets/logo-dark.svg" alt="skilled - Dark logo"></a>
     <button class="button_first">Get Started</button>
@@ -23,19 +24,19 @@
         <p class="header_text">Our modern courses across a range of in-demand skills will give you the knowledge you need to live the life you want.</p>
         <button class="button_second">Get Started</button>
       </div>
+    </header>
 
       <picture>
         <source media="(min-width: 768px)" srcset="./assets/image-hero-tablet.webp">
         <img src="./assets/image-hero-mobile.webp" alt="Decorative hero image">
       </picture>
-    </header>
 
     <section class="course_section">
       <div class="intro_card">
         <h2 class="heading_M">Check out our most popular courses!</h2>
       </div>
       <article class="course_card">
-        <img src="./assets/icon-animation.svg" alt="Decorative animation icon">
+        <img src="./assets/icon-animation.svg" alt="Decorative animation icon" class="course-icon">
         <h3 class="heading_S">Animation</h3>
         <p>
           Learn the latest animation techniques to create stunning motion
@@ -45,7 +46,7 @@
       </article>
 
       <article class="course_card">
-        <img src="./assets/icon-design.svg" alt="Decorative design icon">
+        <img src="./assets/icon-design.svg" alt="Decorative design icon" class="course-icon">
         <h3 class="heading_S">Design</h3>
         <p>
           Create beautiful, usable interfaces to help shape the future of
@@ -55,7 +56,7 @@
       </article>
 
       <article class="course_card">
-        <img src="./assets/icon-photography.svg" alt="Decorative photography icon">
+        <img src="./assets/icon-photography.svg" alt="Decorative photography icon" class="course-icon">
         <h3 class="heading_S">Photography</h3>
         <p>
           Explore critical fundamentals like lighting, composition, and focus
@@ -65,7 +66,7 @@
       </article>
 
       <article class="course_card">
-        <img src="./assets/icon-crypto.svg" alt="Decorative crypto icon">
+        <img src="./assets/icon-crypto.svg" alt="Decorative crypto icon" class="course-icon">
         <h3 class="heading_S">Crypto</h3>
         <p>
           All you need to know to get started investing in crypto. Go from beginner
@@ -75,7 +76,7 @@
       </article>
 
       <article class="course_card">
-        <img src="./assets/icon-business.svg" alt="Decorative business icon">
+        <img src="./assets/icon-business.svg" alt="Decorative business icon" class="course-icon">
         <h3 class="heading_S">Business</h3>
         <p>
           A step-by-step playbook to help you start, scale, and sustain your business
