started tablet design

--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
       </div>
     </header>
 
-      <picture>
-        <source media="(min-width: 768px)" srcset="./assets/image-hero-tablet.webp">
-        <img src="./assets/image-hero-mobile.webp" alt="Decorative hero image">
-      </picture>
+    <picture class="picture">
+      <source media="(min-width: 875px)" srcset="./assets/image-hero-desktop.webp">
+      <source media="(min-width: 530px)" srcset="./assets/image-hero-tablet.webp">
+      <img src="./assets/image-hero-mobile.webp" alt="Decorative hero image">
+    </picture>
 
     <section class="course_section">
       <div class="intro_card">
