--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./css/main.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;700;800&display=swap" rel="stylesheet">
@@ -24,13 +24,13 @@
         <p class="header_text">Our modern courses across a range of in-demand skills will give you the knowledge you need to live the life you want.</p>
         <button class="button_second">Get Started</button>
       </div>
+    
+      <picture class="picture">
+        <source media="(min-width: 875px)" srcset="./assets/image-hero-desktop.webp">
+        <source media="(min-width: 530px)" srcset="./assets/image-hero-tablet.webp">
+        <img src="./assets/image-hero-mobile.webp" alt="Decorative hero image">
+      </picture>
     </header>
-
-    <picture class="picture">
-      <source media="(min-width: 875px)" srcset="./assets/image-hero-desktop.webp">
-      <source media="(min-width: 530px)" srcset="./assets/image-hero-tablet.webp">
-      <img src="./assets/image-hero-mobile.webp" alt="Decorative hero image">
-    </picture>
 
     <section class="course_section">
       <div class="intro_card">
